fix(io): preserve a JRXML's original charset instead of forcing UTF-8
Every reader decoded with UTF-8 and every writer encoded UTF-8, so a report
declared ISO-8859-1 (or any non-UTF-8 charset) had its bytes replaced with
U+FFFD and written back as UTF-8: silent, permanent corruption. A UTF-8 BOM
was also kept as a U+FEFF character in the text, shifting offsets.

Add com.myhooks.io.XmlSource: it detects the encoding from a BOM first and
the XML declaration second, decodes strictly (malformed input fails instead
of becoming a replacement character), and re-encodes edited text in the same
charset with the BOM restored. If an edit introduces a character the source
charset cannot represent, encoding fails loudly rather than corrupting the
file. All discoverers, the report step and Engine's read/apply/write path now
go through it; atomicWrite takes bytes again.

Tests: XmlSourceTest covers UTF-8, UTF-8 BOM, declared Latin-1, UTF-16LE BOM,
malformed input, an unknown declared charset and an unrepresentable edit.
XmlEncodingIntegrationTest drives Engine end-to-end over a Latin-1 file
(asserting 0xE9 survives and no 0xC3 0xA9 appears), a BOM file (asserting the
BOM is preserved) and a malformed file (asserting the commit is blocked and
the file is untouched).